--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -397,6 +397,156 @@ body
     padding: 6px 20px 6px 20px
 
 
+
+
+
+
+
+
+
+
+
+
+// new page article
+
+.article
+    color: rgba(237, 237, 237, 1)
+    display: flex
+    justify-content: center
+    align-items: center
+    margin-top: 60px
+    font-family: Inter
+
+.article-block
+    width: 740px
+
+.article-header__headline
+    font-size: 36px
+    font-weight: 600
+    line-height: 48px
+    letter-spacing: 0em
+
+.article-header__date
+    font-family: Montserrat
+    font-size: 16px
+    font-weight: 100
+    line-height: 24px
+    letter-spacing: 0em
+
+.article-header__text
+    margin: 20px 0 25px 0
+    font-size: 20px
+    font-weight: 400
+    line-height: 32px
+    letter-spacing: 0em
+
+.article-market__header
+    font-family: Inter
+    font-size: 28px
+    font-weight: 600
+    line-height: 40px
+    letter-spacing: 0em
+    padding: 28px 0 16px 0
+
+.article-market__minuses
+    padding-top: 16px
+
+.article-market__pluses, .article-market__minuses
+    font-family: Inter
+    font-size: 24px
+    font-weight: 600
+    line-height: 36px
+    letter-spacing: 0em
+
+
+.market-pluses__row, .market-minuses__row
+    font-family: Inter
+    font-size: 16px
+    font-weight: 400
+    line-height: 24px
+    letter-spacing: 0em
+    padding: 0 0 8px 8px
+
+.article-text__img
+    padding: 24px 0
+
+.article-text
+    font-family: Inter
+    font-size: 16px
+    font-weight: 400
+    line-height: 24px
+    letter-spacing: 0em
+    padding-bottom: 12px
+
+.links-block
+    position: fixed
+    height: 220px
+    width: 28px
+    right: 26px
+    bottom: 196px
+
+.links-media__btn
+    background: inherit
+    border: none
+    padding-bottom: 20px
+
+.links-media__btn:hover
+    cursor: pointer
     
+.footer-block
+    display: flex
+    justify-content: space-between
+    color: rgba(237, 237, 237, 1)
+    padding: 36px 0 40px 80px
+    width: 740px
 
+.footer-community__title
+    font-family: Montserrat
+    font-size: 28px
+    font-weight: 600
+    line-height: 34px
+    letter-spacing: 0em
 
+.social-media__btn 
+    background: inherit
+    border: none
+    padding: 16px 16px 0 0
+
+.social-media__btn:hover
+    cursor: pointer
+
+.footer-nav__title
+    font-family: Montserrat
+    font-size: 18px
+    font-weight: 600
+    line-height: 24px
+    letter-spacing: 0em
+ 
+.footer-nav__row
+    padding-top: 16px
+
+.footer-nav__row a
+    font-family: Montserrat
+    font-size: 16px
+    font-weight: 400
+    line-height: 24px
+    letter-spacing: 0em
+    text-decoration: none
+    color: rgba(237, 237, 237, 1)
+
+.footer-author__title
+    font-family: Montserrat
+    font-size: 18px
+    font-weight: 600
+    line-height: 24px
+    letter-spacing: 0em
+    padding-bottom: 16px
+
+.footer-author__link a
+    font-family: Montserrat
+    font-size: 16px
+    font-weight: 400
+    line-height: 24px
+    letter-spacing: 0em
+    text-decoration: none
+    color: rgba(237, 237, 237, 1)
