--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -46,7 +46,7 @@ body
     text-decoration: none
 
 .header-title
-    //styleName: H1
+    //styleName: H1;
     font-family: Montserrat
     font-size: 72px
     font-weight: 600
@@ -56,7 +56,7 @@ body
     color: #fff
 
 .header-subtitle
-    //styleName: Text Big
+    //styleName: Text Big;
     font-family: Montserrat
     font-size: 20px
     font-weight: 400
@@ -116,7 +116,7 @@ body
     justify-content: center
 
 .block-community__title
-    //styleName: H2
+    //styleName: H2;
     font-family: Montserrat
     font-size: 52px
     font-weight: 600
@@ -142,7 +142,7 @@ body
 
 .block-community__roles
     margin-bottom: 108px
-    //styleName: H3
+    //styleName: H3;
     font-family: Montserrat
     font-size: 40px
     font-weight: 600
@@ -160,7 +160,7 @@ body
     text-align: center
 
 .roles-wrapper__title
-    //styleName: H5
+    //styleName: H5;
     font-family: Montserrat
     font-size: 18px
     font-weight: 600
@@ -178,7 +178,7 @@ body
     width: 196px
     text-align: left
     margin-left: 20px
-    //styleName: Text
+    //styleName: Text;
     font-family: Montserrat
     font-size: 16px
     font-weight: 400
@@ -269,91 +269,6 @@ body
     line-height: 24px
     letter-spacing: 0em
     text-align: left
-
-.news 
-    color: white
-    font-family: Montserrat
-    margin: 120px 0 
-  
-.news-block 
-    display: flex
-    flex-direction: column
-    align-items: center 
-  
-.news-block__title 
-    font-size: 40px
-    font-weight: 600
-    line-height: 48px
-    letter-spacing: 0em
-    text-align: center
-    padding-bottom: 20px 
-
-.news-block__subtitle 
-    padding-bottom: 72px
-    font-family: Montserrat
-    font-size: 20px
-    font-weight: 400
-    line-height: 24px
-    letter-spacing: 0em
-    text-align: center
-
-  
-.news-block__cards 
-    display: flex 
-    
-.news-block__wrapper 
-    display: flex
-    margin-right: 24px
-    width: 628px
-    height: 160px
-    border-radius: 20px
-    background-color: #1c1c1c
-    align-items: center 
-  
-.news-wrapper__content 
-    display: flex 
-  
-.news-wrapper__img 
-    padding: 0 15px 
-  
-.news-wrapper__text 
-    padding-right: 16px 
-  
-.news-wrapper__title 
-    font-family: Montserrat
-    font-size: 18px
-    font-weight: 600
-    line-height: 24px
-    letter-spacing: 0px
-    text-align: left 
-  
-.news-wrapper__subtitle 
-    font-family: Montserrat
-    font-size: 16px
-    font-weight: 400
-    line-height: 24px
-    letter-spacing: 0em
-    text-align: left
-
-.news-block__two
-    padding-top: 24px
-
-.btn-news
-    margin-left: 44.5%
-    margin-top: 28px
-    font-family: Montserrat
-    font-size: 18px
-    font-weight: 500
-    line-height: 24px
-    letter-spacing: 0em
-    text-align: center
-    border: 1px solid rgba(131, 111, 249, 1)
-    background-color: rgba(0, 0, 0, 0)
-    color: #fff
-    padding: 12px 47px
-    border-radius: 20px
-    cursor: pointer
-
 
 
 .grant
